@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-24T01:00:21Z",
+  "timestamp" : "2024-04-24T08:17:51Z",
   "count_outdated" : 2443,
   "uniques_outdated" : 778,
-  "count" : 2457,
-  "uniques" : 788,
+  "count" : 2459,
+  "uniques" : 789,
   "views" : [
     {
       "timestamp": "2024-04-11T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2024-04-20T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-24T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
