@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 10,
+  "count": 16,
+  "uniques": 11,
   "views": [
     {
       "timestamp": "2024-04-11T00:00:00Z",
@@ -24,6 +24,11 @@
     },
     {
       "timestamp": "2024-04-20T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-24T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
